; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_binary.c_mp_binary_get_int.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_binary.c_mp_binary_get_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @mp_binary_get_int(i64 %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %4
  store i32 -1, i32* %9, align 4
  %15 = load i64, i64* %5, align 8
  %16 = sub i64 %15, 1
  %17 = load i32*, i32** %8, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 %16
  store i32* %18, i32** %8, align 8
  br label %20

19:                                               ; preds = %4
  store i32 1, i32* %9, align 4
  br label %20

20:                                               ; preds = %19, %14
  store i64 0, i64* %10, align 8
  %21 = load i32, i32* %6, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %29

23:                                               ; preds = %20
  %24 = load i32*, i32** %8, align 8
  %25 = load i32, i32* %24, align 4
  %26 = and i32 %25, 128
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %29

28:                                               ; preds = %23
  store i64 -1, i64* %10, align 8
  br label %29

29:                                               ; preds = %28, %23, %20
  store i64 0, i64* %11, align 8
  br label %30

30:                                               ; preds = %46, %29
  %31 = load i64, i64* %11, align 8
  %32 = load i64, i64* %5, align 8
  %33 = icmp ult i64 %31, %32
  br i1 %33, label %34, label %49

34:                                               ; preds = %30
  %35 = load i64, i64* %10, align 8
  %36 = shl i64 %35, 8
  store i64 %36, i64* %10, align 8
  %37 = load i32*, i32** %8, align 8
  %38 = load i32, i32* %37, align 4
  %39 = sext i32 %38 to i64
  %40 = load i64, i64* %10, align 8
  %41 = or i64 %40, %39
  store i64 %41, i64* %10, align 8
  %42 = load i32, i32* %9, align 4
  %43 = load i32*, i32** %8, align 8
  %44 = sext i32 %42 to i64
  %45 = getelementptr inbounds i32, i32* %43, i64 %44
  store i32* %45, i32** %8, align 8
  br label %46

46:                                               ; preds = %34
  %47 = load i64, i64* %11, align 8
  %48 = add i64 %47, 1
  store i64 %48, i64* %11, align 8
  br label %30

49:                                               ; preds = %30
  %50 = load i64, i64* %10, align 8
  ret i64 %50
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
